# betapy

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  gitignore  pfc_decomposition_math.md  pyproject.toml
.github/workflows/: ci.yml
betapy/: CHANGELOG.md  README.md  __init__.py  _gui_entry.py  cli.py
betapy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
betapy/core/: badger.py  cache.py  constants.py  io.py  lobster.py  multicenter.py  projection.py  settings.py  stability.py  structure.py  symmetry.py
betapy/data/: elements.py
betapy/gui/: app.py  badger_viewer.py  cohp_viewer.py  lt_viewer.py  multicenter_viewer.py  pfc_viewer.py  refsite_viewer.py  site_picker.py  splash.py  stiffness_shift_widget.py  structure_view.py
docs/: lt_decomposition_math.md  multicenter.md
examples/Diamond/Diamond_ph/: SPOSCAR
examples/Diamond_ph/: FORCE_CONSTANTS  POSCAR
examples/GeTe/: SPOSCAR
examples/GeTe/GeTe_lobster/: CHARGE.lobster  COBICAR.lobster  COHPCAR.lobster  COOPCAR.lobster  ICOBILIST.lobster  ICOHPLIST.lobster  ICOOPLIST.lobster  lobsterin
examples/GeTe/GeTe_ph/: FORCE_CONSTANTS  POSCAR  REFPOS  debug_gete.py
examples/NaCl_ph/: FORCE_CONSTANTS  POSCAR  SPOSCAR
scripts/: cutoff_sweep.py
tests/: test_badger.py  test_io.py  test_lobster.py  test_multicenter.py  test_projection.py  test_shells.py
