[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betapy"
version = "1.1.0"
description = "Projected force constant analysis for Phonopy supercells"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Jan Hempelmann", email = "jan_hempelmann@web.de" },
]
keywords = [
    "phonon",
    "force constants",
    "projected force constants",
    "materials science",
    "phonopy",
    "lattice dynamics",
    "bonding",
    "intercalation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/JanHempelmann/betapy"

[project.optional-dependencies]
gui  = ["matplotlib", "pyqt5", "pyvista", "pyvistaqt"]
test = ["pytest"]

[project.scripts]
# These become terminal commands after `pip install -e .`
# `betapy` runs the CLI, `betapy-gui` opens the GUI directly
betapy     = "betapy.cli:main"
betapy-gui = "betapy._gui_entry:main"

[tool.setuptools.packages.find]
# Tells setuptools to find all packages inside the betapy/ directory
where = ["."]

[tool.setuptools.package-data]
betapy = ["data/*.png"]
